[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news2map"
version = "0.1.0"
description = "Convert news articles into GIS-ready spatial data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Your Name"}]

dependencies = [
  "pydantic>=2.6",
  "openai>=1.30",
  "requests>=2.31",
  "langdetect>=1.0.9",
  "geopandas>=0.14",
  "shapely>=2.0",
  "fiona>=1.9",
  "pyproj>=3.6",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["news2map*"]
exclude = ["data*"]
